# fuchsia

peridot/web/cloud_dashboard/: package-lock.json
products/: core.gni
src/connectivity/network/dhcp/src/: main.rs  server.rs
src/connectivity/network/tests/: BUILD.gn
zircon/system/dev/audio/usb-audio/: BUILD.gn  usb-audio-device.cc  usb-audio.h  usb-midi-sink.cc  usb-midi-sink.h  usb-midi-source.cc  usb-midi-source.h
zircon/system/dev/board/vim2/: vim-usb.cpp
zircon/system/dev/bus/pci/: BUILD.gn  allocation.cpp  allocation.h  bridge.cpp  bridge.h  bus.h  capabilities.h  common.h  config.cpp  config.h  device.cpp  device.h  device_protocol.cpp  device_proxy.cpp  device_proxy.h  ref_counted.h  root.h  upstream_node.h
zircon/system/dev/bus/pci/kpci/: kpci-private.h
zircon/system/dev/bus/pci/test/driver/: fake_bus_driver.cpp  protocol_test_driver.cpp
zircon/system/dev/bus/pci/test/fakes/: fake_allocator.h  fake_bus.h  fake_config.h  fake_ecam.h  fake_pciroot.h  fake_upstream_node.h  test_device.h
zircon/system/dev/bus/pci/test/unit/: allocation_tests.cpp  config_tests.cpp  device_tests.cpp
zircon/system/dev/ethernet/asix-88179/: BUILD.gn  asix-88179.cc  asix-88179.cpp  asix-88179.h
zircon/system/dev/usb/vim2-usb-phy/: aml-usb-phy.cpp  aml-usb-phy.h
zircon/system/fidl/fuchsia-hardware-midi/: midi.fidl
zircon/system/uapp/midiecho/: BUILD.gn  midiecho.cc
zircon/system/ulib/ddk/include/ddk/: platform-defs.h
zircon/system/ulib/hwreg/test/: bitfields-test.cpp
